--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -7,7 +7,7 @@
     padding: 10px;
     margin-bottom: 10px;
   }
-
+/* 
   .error {
     color: red;
     background: lightgrey;
@@ -16,4 +16,4 @@
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
-  }
+  } */
